2007-10-17  Wakaba  <wakaba@suika.fam.cx>

	* Makefile (clean): New rule.

	* NanoDOM.pm (public_id, system_id): New attributes.

2007-10-17  Wakaba  <wakaba@suika.fam.cx>

	* Makefile (CSS-all, CSS-clean, clean): New rules.

2007-10-14  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm (check_document): Support for
	new |is_xml_root| flag.
	(check_element): Support for new |pluses| state.
	(_add_pluses): New method.
	(_remove_minuses): Support for new |minus| item.

2007-09-24  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Raise specific error for invalid
	root element.

2007-09-24  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Set level values for later uses.

2007-09-09  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Support for language tag validation.

2007-09-09  Wakaba  <wakaba@suika.fam.cx>

	* LangTag.pm (check_rfc3066_language_tag): New method.

2007-09-09  Wakaba  <wakaba@suika.fam.cx>

	* LangTag.pm: New module.

2007-09-04  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Some error types were wrong.

2007-08-17  Wakaba  <wakaba@suika.fam.cx>

	* CSS/: New directory.

2007-08-17  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm (_check_get_children): Support
	for |noscript| in |head|.

2007-08-12  Wakaba  <wakaba@suika.fam.cx>

	* URI/: New directory.

2007-08-11  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Tokenizer's states are now represented in
	number.

2007-08-11  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: |or|s for insertion modes are replaced
	by |&|s.

2007-08-11  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Token types are now represented in number.

2007-08-11  Wakaba  <wakaba@suika.fam.cx>

	* ContentType.pm (SEE ALSO): Updated.

	* HTML.pm.src: Insertion modes are now represented in number.

2007-08-11  Wakaba  <wakaba@suika.fam.cx>

	* ContentType.pm: Sniffing for bitmap images (HTML5 revision
	999) is implemented.

2007-08-08  Wakaba  <wakaba@suika.fam.cx>
