@@ -167,6 +167,13 @@ $Whatpm::ContentChecker::LinkType = {
                                       ],
                           'status' => 'accepted'
                         },
+          'noreferer' => {
+                           'effect' => [
+                                         undef,
+                                         'hyperlink'
+                                       ],
+                           'status' => 'accepted'
+                         },
           'openid.delegate' => {
                                  'effect' => [
                                                'external resource',
