@@ -198,3 +198,133 @@
 </p>
 #errors
 /p/dfn;duplicate term
+
+#data
+<p xmlns="http://www.w3.org/1999/xhtml">
+<a href="../../.." rel="up up up up">d</a>
+<a href="../.." rel="up up up">c</a>
+<a href=".." rel="up up">b</a>
+<a href="." rel="up">a</a>
+</p>
+#errors
+
+#data
+<p xmlns="http://www.w3.org/1999/xhtml">
+<a href="../../../.." rel="up up up up index">d</a>
+<a href="../../.." rel="up up up">c</a>
+<a href="../.." rel="up up">b</a>
+<a href="." rel="up">a</a>
+</p>
+#errors
+
+#data
+<p xmlns="http://www.w3.org/1999/xhtml">
+<a href="../../.." rel="up up up up index">d</a>
+<a href="../.." rel="up up up">c</a>
+<a href=".." rel="up up index">b</a>
+<a href="." rel="up">a</a>
+</p>
+#errors
+
+#data
+<p xmlns="http://www.w3.org/1999/xhtml">
+<a href="../../.." rel="up up up up">d</a>
+<a href="../.." rel="up up up index">c</a>
+<a href=".." rel="up up">b</a>
+<a href="." rel="up">a</a>
+</p>
+#errors
+
+#data
+<nav xmlns="http://www.w3.org/1999/xhtml">
+<p>
+<a href="../../../a" rel="up up up up">d</a>
+<a href="../../a" rel="up up up">c</a>
+<a href="../a" rel="up up">b</a>
+<a href="." rel="up">a</a>
+</p>
+<p>
+<a href="../../../.." rel="up up up up up">E</a>
+<a href="../../.." rel="up up up up">D</a>
+<a href="../.." rel="up up up">C</a>
+<a href=".." rel="up up">B</a>
+<a href="." rel="up">A</a>
+</p>
+</nav>
+#errors
+
+#data
+<nav xmlns="http://www.w3.org/1999/xhtml">
+<p>
+<a href="../../../a" rel="up up up up index">d</a>
+<a href="../../a" rel="up up up">c</a>
+<a href="../a" rel="up up">b</a>
+<a href="." rel="up">a</a>
+</p>
+<p>
+<a href="../../../.." rel="up up up up up index">E</a>
+<a href="../../.." rel="up up up up">D</a>
+<a href="../.." rel="up up up">C</a>
+<a href=".." rel="up up">B</a>
+<a href="." rel="up">A</a>
+</p>
+</nav>
+#errors
+
+#data
+<head xmlns="http://www.w3.org/1999/xhtml">
+<title/>
+<link href="../../../a" rel="up up up up index" title="d"/>
+<link href="../../a" rel="up up up" title="c"/>
+<link href="../a" rel="up up" title="b"/>
+<link href="." rel="up" title="a"/>
+</head>
+#errors
+
+#data
+<!-- from spec -->
+<nav xmlns="http://www.w3.org/1999/xhtml">
+ <p>
+  <a href="/" rel="index up up up">Main</a> >
+  <a href="/products/" rel="up up">Products</a> >
+  <a href="/products/dishwashers/" rel="up">Dishwashers</a> >
+  <a>Second hand</a>
+ </p>
+ <p>
+  <a href="/" rel="index up up">Main</a> >
+  <a href="/second-hand/" rel="up">Second hand</a> >
+  <a>Dishwashers</a>
+ </p>
+</nav>
+#errors
+
+#data
+<a xmlns="http://www.w3.org/1999/xhtml" href="" rel="noreferer">.</a>
+#errors
+
+#data
+<a xmlns="http://www.w3.org/1999/xhtml" href="" rel="noreferrer">.</a>
+#errors
+/a/@rel;link type:noreferrer;unsupported
+
+#data
+<area xmlns="http://www.w3.org/1999/xhtml" href="" rel="noreferer" alt="X"
+    coords="1,2,3,4"/>
+#errors
+
+#data
+<area xmlns="http://www.w3.org/1999/xhtml" href="" rel="noreferrer" alt="X"
+    coords="1,2,3,4"/>
+#errors
+/area/@rel;link type:noreferrer;unsupported
+
+#data
+<link xmlns="http://www.w3.org/1999/xhtml" href="" rel="noreferer"/>
+#errors
+/link/@rel;link type:bad context:noreferer
+
+#data
+<link xmlns="http://www.w3.org/1999/xhtml" href="" rel="noreferrer"/>
+#errors
+/link/@rel;link type:noreferrer;unsupported
+
