@@ -1,7 +1,7 @@
 1..359
 # Running under perl version 5.008007 for linux
-# Current time local: Fri Oct 26 23:19:25 2007
-# Current time GMT:   Fri Oct 26 14:19:25 2007
+# Current time local: Sun Nov  4 12:15:37 2007
+# Current time GMT:   Sun Nov  4 03:15:37 2007
 # Using Test.pm version 1.25
 # t/tokenizer/test1.test
 ok 1
