@@ -1,7 +1,7 @@
 1..980
 # Running under perl version 5.008007 for linux
-# Current time local: Fri Oct 26 23:19:28 2007
-# Current time GMT:   Fri Oct 26 14:19:28 2007
+# Current time local: Sun Nov  4 12:15:39 2007
+# Current time GMT:   Sun Nov  4 03:15:39 2007
 # Using Test.pm version 1.25
 # t/tokenizer-test-2.dat
 ok 1
@@ -1307,9 +1307,9 @@ ok 991
 ok 992
 ok 993
 ok 994
-# t/tree-test-2.dat
 ok 995
 ok 996
+# t/tree-test-2.dat
 ok 997
 ok 998
 ok 999
@@ -1374,3 +1374,5 @@ ok 1057
 ok 1058
 ok 1059
 ok 1060
+ok 1061
+ok 1062
