@@ -1,3 +1,8 @@
+2007-11-04  Wakaba  <wakaba@suika.fam.cx>
+
+	* content-model-4.dat: New tests for rel=up (HTML5 revision 1112)
+	and rel=noreferer (HTML5 revision 1118).
+
 2007-10-26  Wakaba  <wakaba@suika.fam.cx>
 
 	* content-model-2.dat: New test for |poster| (HTML5 revision 1097).
