@@ -1,3 +1,7 @@
+2007-11-04  Wakaba  <wakaba@suika.fam.cx>
+
+	* mklinktypelist.pl: Support for rel=noreferer (HTML5 revision 1118).
+
 2007-10-17  Wakaba  <wakaba@suika.fam.cx>
 
 	* Makefile (clean): New rule.
